Readme: use Jenkins status image and reconfigure travis to run only on topic branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ language: scala
 
 scala: tip
 
+branches:
+  except:
+  - master
+
 script:
   - docker build -t google-extractor .
   - docker run --rm --name google-extractor google-extractor
