Add scaladoc to repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
 # scala
 project/project/
-target/
+project/target/
 *.class
+
+## target
+.history
+resolution-cache/ 
+streams/
+test-reports/
+
+## target/scala-2.11
+classes/
+resource_managed/
+src_managed/
+test-classes/
 
 # intelij
 .idea/*
